--- a/appsettings.json
+++ b/appsettings.json
@@ -8,5 +8,9 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "AppSettings":{
+    "PasswordKey": "qvztminybtvezmlp098987ygvcd",
+    "TokenKey": "jasdij23219jdnjaanbpwidnusm"
+  }
 }
